--- a/src/main/webapp/client/js/connections/templates/connection.html
+++ b/src/main/webapp/client/js/connections/templates/connection.html
@@ -1,104 +1,37 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <a class="back-button-link" href="/web/connections/"></a>
-
         <div class="content-title">
-            <h2>Header</h2>
+            <h2>{{header}}</h2>
         </div>
     </div>
 
     <div class="row-fluid">
         <div class="span12 content">
-            <form id="mainRunConnection" class="form-horizontal" action="/web/connections/1" method="post"><input
-                    type="hidden"
-                    name="_method"
-                    value="PUT">
-
+            <div id="mainRunConnection" class="form-horizontal">
                 <fieldset>
-                    <div class="control-group">
-                        <label for="seaport" class="control-label">
-                            Seaport
-                        </label>
-
-                        <div class="controls">
-                            <select id="seaport" name="seaport">
-                                {{#each seaports}}
-                                    <option value="{{this.uniqueId}}" {{#if this.selected}}selected="selected"{{/if}}>{{this.name}}</option>
-                                {{/each}}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label for="terminal" class="control-label">
-                            Terminal
-                        </label>
-
-                        <div class="controls">
-                            <select id="terminal" name="terminal">
-                                {{#each terminals}}
-                                <option value="{{this.uniqueId}}" {{#if this.selected}}selected="selected"{{/if}}>{{this.name}}</option>
-                                {{/each}}
-
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label for="routeType" class="control-label">Type</label>
-
-                        <div class="controls">
-                            <select id="routeType" name="routeType">
-                                {{#each routeTypes}}
-                                <option value="{{this.name}}" {{#if this.selected}}selected="selected"{{/if}}>{{this.name}}</option>
-                                {{/each}}
-                            </select>
-                        </div>
-                    </div>
-
-
-                    <div class="control-group">
-                        <label for="bargeDieselDistance" class="control-label">Barge km</label>
-
-                        <div class="controls">
-                            <input id="bargeDieselDistance" name="bargeDieselDistance" class="comma-replacement-aware"
-                                   title="Barge km" type="text" value="{{connection.bargeDieselDistance}}">
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label for="railDieselDistance" class="control-label">Rail Diesel km</label>
-
-                        <div class="controls">
-                            <input id="railDieselDistance" name="railDieselDistance" class="comma-replacement-aware"
-                                   title="Rail Diesel km" type="text" value="{{connection.railDieselDistance}}">
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label for="railElectricDistance" class="control-label">Rail Electrical km</label>
-
-                        <div class="controls">
-                            <input id="railElectricDistance" name="railElectricDistance" class="comma-replacement-aware"
-                                   title="Rail Electrical km" type="text" value="{{connection.railElectricDistance}}">
-                        </div>
-                    </div>
-
-                    <div class="control-group">
+                    <div id="seaports" class="control-group"></div>
+                    <div id="terminals" class="control-group"></div>
+                    <div id="routeTypes" class="control-group"></div>
+                    <div id="distances"></div>
+                    <div id="enabledStatus" class="control-group">
                         <label for="enabled" class="control-label">Connection enabled</label>
-
                         <div class="controls">
                             <div class="checkbox inline">
-                                <input id="enabled" name="enabled" type="checkbox" {{#if connection.enabled}} checked="checked" {{/if}}>
+                                {{#if enabled}}
+                                <input id="enabled" name="enabled" type="checkbox" checked="checked">
+                                {{else}}
+                                <input id="enabled" name="enabled" type="checkbox">
+                                {{/if}}
                             </div>
                         </div>
                     </div>
-
                     <div class="form-actions">
-                        <input id="submit-button" class="btn btn-primary" type="submit" value="Create">
+                        <button id="submit-button" class="btn btn-primary">{{submitText}}</button>
                         <a id="back-button" class="btn" href="/web/connections/">Back</a>
                     </div>
                 </fieldset>
-            </form>
+            </div>
         </div>
     </div>
 </div>
