Add frontend validation for connections
refs #11701

--- a/src/main/webapp/client/js/connections/templates/distances.html
+++ b/src/main/webapp/client/js/connections/templates/distances.html
@@ -2,8 +2,9 @@
     <label for="bargeDieselDistance" class="control-label">Barge km</label>
 
     <div class="controls">
-        <input id="bargeDieselDistance" name="bargeDieselDistance" class="comma-replacement-aware"
+        <input id="bargeDieselDistance" name="bargeDieselDistance" class="comma-replacement-aware number"
                title="Barge km" type="text" value="{{barge}}">
+        <span class="help-inline error"></span>
     </div>
 </div>
 
@@ -11,8 +12,9 @@
     <label for="railDieselDistance" class="control-label">Rail Diesel km</label>
 
     <div class="controls">
-        <input id="railDieselDistance" name="railDieselDistance" class="comma-replacement-aware"
+        <input id="railDieselDistance" name="railDieselDistance" class="comma-replacement-aware number"
                title="Rail Diesel km" type="text" value="{{raildiesel}}">
+        <span class="help-inline error"></span>
     </div>
 </div>
 
@@ -20,7 +22,8 @@
     <label for="railElectricDistance" class="control-label">Rail Electrical km</label>
 
     <div class="controls">
-        <input id="railElectricDistance" name="railElectricDistance" class="comma-replacement-aware"
+        <input id="railElectricDistance" name="railElectricDistance" class="comma-replacement-aware number"
                title="Rail Electrical km" type="text" value="{{railelectric}}">
+        <span class="help-inline error"></span>
     </div>
 </div>
