decrease size of subconnection input elements
References #11701

--- a/src/main/webapp/client/js/connections/templates/subconnection.html
+++ b/src/main/webapp/client/js/connections/templates/subconnection.html
@@ -13,13 +13,13 @@
         {{/if}}
         {{/each}}
     </select>
-    <input class="type" title="type" type="text" readonly value="{{model.routeType.value}}">
+    <input class="type input-small" title="type" type="text" readonly value="{{model.routeType.value}}">
     {{#with model.distances }}
-    <input class="barge comma-replacement-aware number" title="barge" type="text" value="{{barge}}"/>
+    <input class="barge comma-replacement-aware number input-small" title="barge" type="text" value="{{barge}}"/>
     <span class="help-inline error"></span>
-    <input class="raildiesel comma-replacement-aware number" title="raildiesel" type="text" value="{{raildiesel}}"/>
+    <input class="raildiesel comma-replacement-aware number input-small" title="raildiesel" type="text" value="{{raildiesel}}"/>
     <span class="help-inline error"></span>
-    <input class="railelectric comma-replacement-aware number" title="railelectric" type="text" value="{{railelectric}}"/>
+    <input class="railelectric comma-replacement-aware number input-small" title="railelectric" type="text" value="{{railelectric}}"/>
     <span class="help-inline error"></span>
     {{/with}}
     {{#if latest}}
