Add name to route types
refs #11701

--- a/src/main/webapp/client/js/connections/templates/subconnection.html
+++ b/src/main/webapp/client/js/connections/templates/subconnection.html
@@ -13,7 +13,7 @@
         {{/if}}
         {{/each}}
     </select>
-    <input class="type input-small" title="type" type="text" readonly value="{{model.routeType.value}}">
+    <input class="type input-small" title="type" type="text" readonly value="{{model.routeType.name}}">
     {{#with model.distances }}
     <input class="barge comma-replacement-aware number input-small" title="barge" type="text" value="{{barge}}"/>
     <span class="help-inline error"></span>
