--- a/src/main/webapp/client/js/connections/templates/routetypes.html
+++ b/src/main/webapp/client/js/connections/templates/routetypes.html
@@ -4,9 +4,9 @@
     <select id="routeType" name="routeType">
         {{#each types}}
         {{#if this.selected}}
-        <option value="{{this.value}}" selected="selected">{{this.value}}</option>
+        <option value="{{this.value}}" selected="selected">{{this.name}}</option>
         {{else}}
-        <option value="{{this.value}}">{{this.value}}</option>
+        <option value="{{this.value}}">{{this.name}}</option>
         {{/if}}
         {{/each}}
     </select>
