--- a/src/main/webapp/client/js/connections/templates/subconnection.html
+++ b/src/main/webapp/client/js/connections/templates/subconnection.html
@@ -25,4 +25,7 @@
     {{#if latest}}
     <button class="new-subconnection btn btn-primary"><i class="icon-plus-sign icon-white"></i></button>
     {{/if}}
+    {{#if latestAndNotFirst}}
+    <button class="remove-subconnection btn btn-primary btn-danger"><i class="icon-trash icon-white"></i></button>
+    {{/if}}
 </div>
