Change header for rail electric km
refs #11701

--- a/src/main/webapp/client/js/connections/templates/subconnection.html
+++ b/src/main/webapp/client/js/connections/templates/subconnection.html
@@ -6,7 +6,7 @@
         <div class="subconnection-header-small float-left">Routetype</div>
         <div class="subconnection-header-small float-left">Barge km</div>
         <div class="subconnection-header-small float-left">Rail km (Diesel)</div>
-        <div class="subconnection-header-small float-left clearfix">Rail km (El.)</div>
+        <div class="subconnection-header-small float-left clearfix">Rail km (Electr.)</div>
     </div>
     <br>
     {{/if}}
