--- a/src/main/webapp/client/js/connections/templates/distances.html
+++ b/src/main/webapp/client/js/connections/templates/distances.html
@@ -2,8 +2,13 @@
     <label for="bargeDieselDistance" class="control-label">Barge km</label>
 
     <div class="controls">
+        {{#if isBarge }}
         <input id="bargeDieselDistance" name="bargeDieselDistance" class="comma-replacement-aware number"
                title="Barge km" type="text" value="{{barge}}">
+        {{ else }}
+        <input id="bargeDieselDistance" name="bargeDieselDistance" class="comma-replacement-aware number"
+               title="Barge km" type="text" value="{{barge}}" readonly="readonly">
+        {{/if}}
         <span class="help-inline error"></span>
     </div>
 </div>
@@ -12,8 +17,13 @@
     <label for="railDieselDistance" class="control-label">Rail Diesel km</label>
 
     <div class="controls">
+        {{#if isRail }}
         <input id="railDieselDistance" name="railDieselDistance" class="comma-replacement-aware number"
                title="Rail Diesel km" type="text" value="{{raildiesel}}">
+        {{ else }}
+        <input id="railDieselDistance" name="railDieselDistance" class="comma-replacement-aware number"
+               title="Rail Diesel km" type="text" value="{{raildiesel}}" readonly="readonly">
+        {{/if}}
         <span class="help-inline error"></span>
     </div>
 </div>
@@ -22,8 +32,13 @@
     <label for="railElectricDistance" class="control-label">Rail Electrical km</label>
 
     <div class="controls">
+        {{#if isRail}}
         <input id="railElectricDistance" name="railElectricDistance" class="comma-replacement-aware number"
                title="Rail Electrical km" type="text" value="{{railelectric}}">
+        {{ else }}
+        <input id="railElectricDistance" name="railElectricDistance" class="comma-replacement-aware number"
+               title="Rail Electrical km" type="text" value="{{railelectric}}" readonly="readonly">
+        {{/if}}
         <span class="help-inline error"></span>
     </div>
 </div>
