--- a/src/main/webapp/client/js/routing/templates/AddressList.html
+++ b/src/main/webapp/client/js/routing/templates/AddressList.html
@@ -3,8 +3,8 @@
             <a class="collapsable-indicator clickable" href="#collapse{{cid}}" 
                data-toggle="collapse" {{#if moreThanOne}}title="Expand for {{more}} suburbs"{{/if}}></a>
 
-        <div class="content-title accordion-content-title content-title-grey selectParentAddress">
-            <h4 style="font-weight: normal;">
+        <div class="content-title accordion-content-title">
+            <h4>
                 {{parentAddress.address.postcode}} 
                 {{parentAddress.displayName}} 
                 {{#if moreThanOne}} 
